--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/style.css">
-    <title>Blue City Cab</title>
+    <!-- Primary Meta Tags -->
+<title>Blue City Cab - Cab Service In Jodhpur - Cab Booking In Jodhpur - Taxi Service In Jodhpur</title>
+<meta name="title" content="Blue City Cab - Cab Service In Jodhpur - Cab Booking In Jodhpur - Taxi Service In Jodhpur">
+<meta name="description" content="Life is a journey. Enjoy the ride with a cab. Blue City Cab has been providing cab service and taxi service for a long period in Jodhpur.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://bluecitycab.com/">
+<meta property="og:title" content="Blue City Cab - Cab Service In Jodhpur - Cab Booking In Jodhpur - Taxi Service In Jodhpur">
+<meta property="og:description" content="Life is a journey. Enjoy the ride with a cab. Blue City Cab has been providing cab service and taxi service for a long period in Jodhpur.">
+<meta property="og:image" content="images/Morocco_Amazing-Photos-of-Towns-with-Colorful-Houses-Around-the-World.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://www.bluecitycab.com/">
+<meta property="twitter:title" content="Blue City Cab - Cab Service In Jodhpur - Cab Booking In Jodhpur - Taxi Service In Jodhpur">
+<meta property="twitter:description" content="Life is a journey. Enjoy the ride with a cab. Blue City Cab has been providing cab service and taxi service for a long period in Jodhpur.">
+<meta property="twitter:image" content="images/Morocco_Amazing-Photos-of-Towns-with-Colorful-Houses-Around-the-World.jpg">
     <link rel="shortcut icon" href="taxi.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
